server: added server.js file with basic server functionality. Updated package.json to include scripts to start server.

--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Proxy server to manage requests/responses between the React client and OpenAI API.",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "devStart": "nodemon src/server.js"
   },
   "keywords": [
     "server",
