--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   ],
   "author": "Riccardo riccardop@outlook.com",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^3.1.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
