--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client and Server for a chat bot using OpenAI API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --reporter verbose"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/riccardopdev/ric-chatGPT/issues"
   },
-  "homepage": "https://github.com/riccardopdev/ric-chatGPT#readme"
+  "homepage": "https://github.com/riccardopdev/ric-chatGPT#readme",
+  "devDependencies": {
+    "vitest": "^0.28.5"
+  }
 }
