--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   ],
   "author": "Riccardo riccardop@outlook.com",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "openai": "^3.1.0"
   },
