--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "serverless-http": "^3.2.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
